the_project/ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
