the_project/ping-pong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ing
spec:
  rules:
  - http:
      paths:
      - path: /ping-pong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 2345
